Rename first people

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<figure class="people__card-img-wrap">
 								<img src="img/avatars/SaraSoueidan.jpeg" alt="SaraSoueidan" class="people__card-img">
 								<figcaption class="people__card-disc">
-								Sara Soueidan
+								Abdul ob Stull
 								</figcaption>
 							</figure>
 						</a>
